syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.examples.raft";
option java_outer_classname = "RaftProto";
option objc_class_prefix = "RAFT";

package raft;

service Raft {
  rpc AppendEntries(AppendRequest) returns (AppendResponse) {}
  rpc RequestVote(VoteRequest) returns (VoteResponse) {}
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse) {}
}

message VoteRequest {
  uint64 term = 1;
  string candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool voteGranted = 2;
}

message AppendRequest {
  uint64 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  uint64 leaderCommit = 5;
  repeated string entries = 6;
}

message AppendResponse {
  uint64 term = 1;
  bool success = 2;
}

message InstallSnapshotRequest {
  uint64 term = 1;
  string leaderId = 2;
  uint64 lastIncludedIndex = 3;
  uint64 lastIncludedTerm = 4;
  bool done = 5;
  uint64 offset = 6;
  bytes data = 7;
}

message InstallSnapshotResponse {
  uint64 term = 1;
}